<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/profile"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/location"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/floor"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/on"
            android:title="@string/logout" />
    </group>

</menu>
